# chemtorch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  chemtorch_cli.py  create_coord_descriptor.ipynb  create_different_descriptors.ipynb  environment.yml  feature_exploration.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  rdb7.sh  rgd1.sh  search.html  searchindex.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation.yaml  feature_request.yaml
.github/workflows/: branch-and-label-check.yml  deploy-docs.yml  pytest.yml  release-drafter.yaml
.gitlab/issue_templates/: Bug_Report.md  Feature_Request.md  Refactor_Proposal.md
_sources/: index.rst
_sources/developer_guide/: testing.rst
_sources/examples/: sweeps.rst
_sources/getting_started/: experiments.rst  wandb.rst
_sources/user_guide/: cli_usage.rst
advanced_guide/: hydra.html  integration_tests.html  props.html
conf/: base.yaml  config.yaml  features.yaml  sweep.yaml  vocab_check.yaml
conf/data/: cycloadd.yaml  data.yaml  e2.yaml  e2_cgr.yaml  e2_cgr_rw_dummy.yaml  e2_cgr_transformed.yaml  e2_cgr_with_pretransform.yaml  e2_cgr_with_pretransform_dummy.yaml  e2_cgr_with_pretransform_line.yaml  e2_unmapped.yaml  e2_unmapped_with_pretransform.yaml  e2_unmapped_with_pretransform_dummy.yaml  e2_unmapped_with_pretransform_line.yaml  rdb7.yaml  rdb7_cgr.yaml  rdb7_cgr_sep.yaml  rdb7_cgr_with_pretransform.yaml  rdb7_dmg.yaml  rdb7_drfp.yaml  rdb7_line_cgr.yaml  rdb7_line_dmg.yaml  rdb7_unmapped.yaml  rdb7_unmapped_double.yaml  rdb7_unmapped_with_pretransform_line.yaml  rgd1.yaml  rgd1_cgr_with_pretransform.yaml  sn2.yaml
conf/data_cfg/: e2_cgr.yaml  e2_cgr_dummy.yaml  e2_dmg.yaml  e2_dmg_dummy.yaml  pos1_rdb7_cgr.yaml  pos1_rdb7_cgr_pna.yaml  pos2_rdb7_cgr.yaml  pos2_rdb7_cgr_pna.yaml  rdb7_cgr.yaml  rdb7_cgr_dummy.yaml  rdb7_cgr_pna.yaml  rdb7_dmg.yaml  rdb7_dmg_dummy.yaml  rdb7_dmg_dummy_pna.yaml  rdb7_dmg_pos.yaml  rdb7_dmg_pos2.yaml  rdb7_dmg_pos2_pna.yaml  rdb7_drfp.yaml  rdb7_line_cgr.yaml  rdb7_line_cgr_pna.yaml  rdb7_line_cgr_pos.yaml  rdb7_line_dmg.yaml  rdb7_line_dmg_pos.yaml
conf/data_ingestor/: cycloadd.yaml  e2.yaml  rdb7.yaml  rdb7_cv.yaml  rdb7_fwd.yaml  rdb7_fwd_rev_spiekermann.yaml  rdb7_fwd_xyz.yaml  rdb7_xyz.yaml  rdb7new.yaml  rgd1.yaml  rgd1_cgr.yaml  sn2.yaml  uspto_1k.yaml
conf/data_loader/: data_loader.yaml
conf/data_module/: data_module.yaml
conf/data_pipeline/: cycloadd.yaml  e2.yaml  rdb7.yaml  rdb7_fwd.yaml  rdb7_fwd_rev_spiekermann.yaml  rdb7_fwd_xyz.yaml  rdb7new.yaml  rgd1.yaml  sn2.yaml  uspto_1k.yaml
conf/dataloader/: pyg_dataloader.yaml  torch_dataloader.yaml
conf/dataset/: fingerprint.yaml  graph.yaml  token.yaml
conf/experiment/: 3d_features.yaml  3d_graph.yaml  CGR.yaml  CGR_opt.yaml  CGR_opt_rw.yaml  CGR_opt_tr.yaml  dimereaction_ts_sensitivity.yaml  dimereaction_ts_sensitivity_augmented.yaml  e2_unmapped.yaml  example.yaml  fingerprint.yaml  gine.yaml  gnn.yaml  gnn_old.yaml  gotennet.yaml  gotenreaction.yaml  graph.yaml  lightning.yaml  mace_3d.yaml  no_coordinates.yaml  size_split.yaml  token.yaml  ts_3d_graph.yaml  unmapped.yaml  xyz.yaml
conf/experiment_cfg/: cgr_dmpnn.yaml  cgr_e2.yaml  cgr_pretrain.yaml  cgr_rdb7.yaml  cgr_rgd1.yaml  dmg_dmpnn_masked.yaml  dmpnn_mpnn_standard_reprs.yaml  exp1_DMPNN.yaml  exp1_GAT.yaml  exp1_GATv2.yaml  exp1_GCN.yaml  exp1_GINE.yaml  exp1_GatedGCN.yaml  exp1_PNA.yaml  exp2_cgr.yaml  exp2_dmg.yaml  exp3_gatedgcn.yaml  exp4_DMPNN.yaml  exp4_DMPNN2.yaml  exp4_GAT.yaml  exp4_GAT2.yaml  exp4_GATv2.yaml  exp4_GATv22.yaml  exp4_GCN.yaml  exp4_GCN2.yaml  exp4_GINE.yaml  exp4_GINE2.yaml  exp4_GatedGCN.yaml  exp4_GatedGCN2.yaml  exp4_PNA.yaml  exp4_PNA2.yaml  exp5_GatedGCN.yaml  exp6_GPS.yaml  exp7_MASKED.yaml  exp7_MASKED_line.yaml  expQM.yaml  experiment1.yaml  gat_mpnn_standard_reprs.yaml  gatedgcn_mpnn_standard_reprs.yaml  gcn_mpnn_standard_reprs.yaml  (+12 more)
conf/features/: features.yaml
conf/model/: custom.yaml  deeprxn.yaml  dimenet++.yaml  dimenetplusplus.yaml  dimereaction.yaml  dmpnn.yaml  dmpnn_deeprxn.yaml  dmpnn_gps.yaml  dmpnn_masked.yaml  dmpnn_opt.yaml  dmpnn_rwpe.yaml  fingerprint_mlp.yaml  gat.yaml  gat_old.yaml  gatedgcn.yaml  gatv2.yaml  gcn.yaml  gine.yaml  gnn.yaml  gotennet.yaml  gotenreaction.yaml  gps.yaml  gps_double.yaml  gps_line.yaml  han.yaml  hybrid.yaml  mace.yaml  masked.yaml  mlp.yaml  mlp_legacy.yaml  pna.yaml  reaction_gps.yaml  reaction_gps_origins.yaml  rxn_gps.yaml
conf/model_cfg/: dmpnn.yaml  gat.yaml  gatedgcn.yaml  gatv2.yaml  gcn.yaml  gine.yaml  gps.yaml  mlp.yaml  mlp_regressor.yaml  mpnn.yaml  opt_dmpnn.yaml  opt_gat.yaml  opt_gatedgcn.yaml  opt_gatv2.yaml  opt_gcn.yaml  opt_gine.yaml  opt_hybrid.yaml  opt_pna.yaml  pna.yaml
conf/optimizer/: adamw_gps.yaml  adamw_test.yaml
conf/props/: degree_statistics.yaml  fp_length.yaml  label_mean.yaml  label_std.yaml  num_edge_features.yaml  num_node_features.yaml  precompute_time.yaml  vocab_size.yaml
conf/routine/: classification.yaml  regression.yaml  regression_legacy.yaml  regression_lightning.yaml
conf/scheduler/: constant.yaml  reduce_plateau.yaml  (+2 more)
developer_guide/: contributing.html  framework_structure.html  hydra.html  testing.html
examples/: ood_benchmarking.html  sweeps.html  training_curves.html
getting_started/: cli_usage.html  config.html  custom_dataset.html  experiments.html  logging.html  quick_start.html  wandb.html
out-of-the-box/: RGT.yaml  RGT_full.yaml
resources/: README.md  substruc_vocab.txt  vocab.txt
scripts/: README.md  check_vocab.py  collect_env.py  demo.ipynb  generate_data_split_configs.py  install_pyg_deps.py  legacy_main.py  lit_main.py  main.py  main_lightning.py  test.py  test_fp.py  test_qm.py  visualization.ipynb  wandb_to_hydra.py
tools/: README.md  resolve_target.py
user_guide/: cli_usage.html  config_ref.html  custom_components.html  custom_data.html  inference.html  pipeline_overview.html  reproducibility.html  sweeps.html
(+1164 files in other folders)
