[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemtorch"
authors = [
    { name = "Esther Heid", email = "esther.heid@tuwien.ac.at" },
]
description = "Deep learning of chemical reactions"
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "rdkit",
    "numpy==1.26.4",
    "scikit-learn",
    "torch==2.5.1",
    "pandas",
    "hydra-core>=1.3.2",
    "wandb>=0.20.1",
    "pytorch-lightning>=2.4.0",
    "lightning>=2.3.3",
    "flask>=3.0.3",
    "omegaconf>=2.3.0",
    "sympy>=1.12.1",
    "tqdm>=4.67.1",
    "torchmetrics>=1.5.2",
]
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "chemtorch.__version__" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
