[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemtorch"
authors = [
    { name = "Esther Heid", email = "esther.heid@tuwien.ac.at" },
]
description = "Deep learning of chemical reactions"
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "rdkit",
    "numpy==1.26.4",
    "scikit-learn",
    "torch==2.5.1",
    "pandas",
    "hydra-core>=1.3.2",
    "wandb>=0.20.1",
    "pytorch-lightning>=2.4.0",
    "lightning>=2.3.3",
    "flask>=3.0.3",
    "omegaconf>=2.3.0",
    "sympy>=1.12.1",
    "tqdm>=4.67.1",
    "torchmetrics>=1.5.2",
    "pytest-order>=1.3.0",
    "pytest-dependency>=0.6.0",
    "sphinx>=8.1.3",
    "sphinxcontrib-programoutput>=0.18",
]
readme = "README.md"
dynamic = ["version"]

[project.scripts]
chemtorch = "chemtorch.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "chemtorch.__version__" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-order>=1.3.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
markers = [
    "extended: marks tests as extended/comprehensive (deselect with '-m \"not extended\"')",
    "integration: marks tests as integration tests that should run after unit tests",
]
testpaths = ["test"]
addopts = "-v"
