[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemtorch"
authors = [
    { name = "Esther Heid", email = "esther.heid@tuwien.ac.at" },
]
description = "Deep learning of chemical reactions"
license = { text = "MIT License" }

readme = "README.md"
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
  "rdkit",
  "numpy",
  "scikit-learn",
  "pandas",
  "hydra-core>=1.3.2",
  "wandb>=0.20.1",
  "pytorch-lightning>=2.4.0",
  "lightning>=2.3.3",
  "flask>=3.0.3",
  "omegaconf>=2.3.0",
  "sympy>=1.12.1",
  "tqdm>=4.67.1",
  "torchmetrics>=1.5.2",
  "torch_geometric",
]

[project.scripts]
chemtorch = "chemtorch.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "chemtorch.__version__" }

[tool.pytest.ini_options]
markers = [
  "extended: marks tests as extended/comprehensive (deselect with '-m \"not extended\"')",
  "integration: marks tests as integration tests that should run after unit tests",
]
testpaths = ["test"]
addopts = "-v"

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.3.0",
]
docs = [
    "sphinx>=8.1.3",
    "myst-parser>=4.0.1",
    "sphinxcontrib-programoutput>=0.18",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-book-theme>=1.1.4",
    "sphinx-rtd-theme>=3.0.2",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1,<2.9",
]
cu118 = [
  "torch>=2.5.1,<2.8",
]
cu121 = [
  "torch>=2.5.1,<2.8",
]
cu124 = [
  "torch>=2.5.1,<2.8",
]
cu126 = [
  "torch>=2.6,<2.9",
]
cu128 = [
  "torch>=2.7,<2.9",
]
cu129 = [
  "torch>=2.8,<2.9",
]
cu130 = [
  "torch>=2.9,<2.10",
]
macos = [
  "torch>=2.5.1,<2.9",
]


[tool.uv]
conflicts = [
  [{ extra = "cpu" }, { extra = "cu118" }],
  [{ extra = "cpu" }, { extra = "cu121" }],
  [{ extra = "cpu" }, { extra = "cu124" }],
  [{ extra = "cpu" }, { extra = "cu126" }],
  [{ extra = "cpu" }, { extra = "cu128" }],
  [{ extra = "cpu" }, { extra = "cu129" }],
  [{ extra = "cpu" }, { extra = "cu130" }],
  [{ extra = "cpu" }, { extra = "macos" }],
  [{ extra = "cu118" }, { extra = "cu121" }],
  [{ extra = "cu118" }, { extra = "cu124" }],
  [{ extra = "cu118" }, { extra = "cu126" }],
  [{ extra = "cu118" }, { extra = "cu128" }],
  [{ extra = "cu118" }, { extra = "cu129" }],
  [{ extra = "cu118" }, { extra = "cu130" }],
  [{ extra = "cu121" }, { extra = "cu124" }],
  [{ extra = "cu121" }, { extra = "cu126" }],
  [{ extra = "cu121" }, { extra = "cu128" }],
  [{ extra = "cu121" }, { extra = "cu129" }],
  [{ extra = "cu121" }, { extra = "cu130" }],
  [{ extra = "cu124" }, { extra = "cu126" }],
  [{ extra = "cu124" }, { extra = "cu128" }],
  [{ extra = "cu124" }, { extra = "cu129" }],
  [{ extra = "cu124" }, { extra = "cu130" }],
  [{ extra = "cu126" }, { extra = "cu128" }],
  [{ extra = "cu126" }, { extra = "cu129" }],
  [{ extra = "cu126" }, { extra = "cu130" }],
  [{ extra = "cu128" }, { extra = "cu129" }],
  [{ extra = "cu128" }, { extra = "cu130" }],
  [{ extra = "cu129" }, { extra = "cu130" }],
  [{ extra = "cu118" }, { extra = "macos" }],
  [{ extra = "cu121" }, { extra = "macos" }],
  [{ extra = "cu124" }, { extra = "macos" }],
  [{ extra = "cu126" }, { extra = "macos" }],
  [{ extra = "cu128" }, { extra = "macos" }],
  [{ extra = "cu129" }, { extra = "macos" }],
  [{ extra = "cu130" }, { extra = "macos" }],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu129", extra = "cu129" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
